Fixed alignment of the configuration group overlay

--- a/src/modules/configuration/app.scss
+++ b/src/modules/configuration/app.scss
@@ -5,8 +5,13 @@ body {
   font-size: 100%;
 }
 
+#app {
+  height: 100%;
+}
+
 app {
   display: block;
+  height: 100%;
 }
 
 #header {
@@ -83,6 +88,7 @@ app {
 
 #content {
   float: left;
+  height: 100%;
 
   padding: 0;
 }
