--- a/src/modules/configuration/components/settings/group.scss
+++ b/src/modules/configuration/components/settings/group.scss
@@ -104,6 +104,10 @@
 
   .header-option {
     padding: 18px 6px 18px 0;
+
+    .switch {
+      height: 24px;
+    }
   }
 }
 
