--- a/src/modules/configuration/views/settings.scss
+++ b/src/modules/configuration/views/settings.scss
@@ -1,4 +1,6 @@
 [data-view="eon.extension.core:settings"] {
+  height: 100%;
+
   .children > .box {
     margin: 0 0 30px;
   }
